# Reversible-Recom-Replication

./: .gitignore  Manifest.toml  Project.toml  README.md  line_plot_was_VA.py  py_requirements.txt  setup_all.sh  test_4.sh  test_7.sh  test_VA.sh
Ben_Tally/: Cargo.toml
Ben_Tally/src/: main.rs
JSON/: 4x4.json  7x7.json
VA_full_data/: .gitattributes  VA_Forest_steps_10000000_rng_seed_278986_gamma_0.0_alpha_1.0_ndists_11_20241112_124346_tallies.parquet  VA_RevRecom_steps_15000000000_rng_seed_278986_plan_CD_12_20241113_095352_tallies.parquet  VA_RevRecom_steps_15000000000_rng_seed_278986_plan_CD_16_20241113_095352_tallies.parquet  VA_RevRecom_steps_15000000000_rng_seed_278986_plan_rand_dist_eps0p01_20241113_095352_tallies.parquet  VA_RevRecom_steps_5000000000_rng_seed_278986_plan_CD_12_20241106_152157_tallies.parquet  VA_RevRecom_steps_5000000000_rng_seed_278986_plan_CD_16_20240618_174413_tallies.parquet
aux_script_files/: read_cuts_4.py  read_cuts_7.py  run_4.jl  run_7.jl  run_VA.jl  setup.jl
