[package]
name = "ben_tally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-ensemble = "0.2.0"
clap = "4.5.7"
csv = "1.3.0"
indicatif = "0.17.8"
pbr = "1.1.1"
polars = { version = "0.40.0", features = ["parquet"] }
rayon = "1.10.0"
serde = {version ="1.0.203", features = ["derive"]}
serde_json = "1.0.117"

[[bin]]
name = "ben-tally"
path = "src/main.rs"
